--- a/RegisterNow.html
+++ b/RegisterNow.html
@@ -25,9 +25,9 @@
 			<div class="container">
 				<div class="row">
 					<div class="col mt-5 pt-4">
-						<h1 class="text-light">About Us</h1>
+						<h1 class="text-light">Register Now</h1>
 						<p class="lead">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, saepe.
+<!-- 							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, saepe. -->
 						</p>
 					</div>
 				</div>
@@ -38,98 +38,11 @@
 
 	<!-- Info Section Start -->
 	<section id="about-info" class="py-5 my-5">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-6 col-md-6  align-self-center">
-					<h1>What We Do</h1>
-					<p class="lead">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint ex quaerat magnam obcaecati repellendus
-						voluptatum quisquam architecto iure, aliquam labore.
-					</p>
-					<p class="lead">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint ex quaerat magnam obcaecati repellendus
-						voluptatum quisquam architecto iure, aliquam labore.
-					</p>
-				</div>
-				<div class="col-lg-6 col-md-6 align-self-center text-center">
-					<img src="img/about/info.jpg" class="img-fluid w-50 h-70 rounded-circle">
-				</div>
-			</div>
-		</div>
+		<iframe width="100%x" height="480px" src="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u&embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
 	</section>
 	<!-- About Info Section End -->
 
-	<!-- About Services Section Start -->
-	<section id="about-services" class="py-5 text-light
-	text-center bg-dark">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-4 col-md-4">
-					<div class="card bg-success ">
-						<div class="card-body">
-							<i class="fas fa-envelope"></i>
-							<h2 class="text-light m-0">Lorem Ipsum</h2>
-							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="card bg-danger ">
-						<div class="card-body">
-							<i class="fas fa-car"></i>
-							<h2 class="text-light m-0">Lorem Ipsum</h2>
-							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="card bg-primary ">
-						<div class="card-body">
-							<i class="fas fa-play"></i>
-							<h2 class="text-light m-0">Lorem Ipsum</h2>
-							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="row mt-3">
-				<div class="col-lg-4 col-md-4">
-					<div class="card bg-info ">
-						<div class="card-body">
-							<i class="fas fa-cart-plus"></i>
-							<h2 class="text-light m-0">Lorem Ipsum</h2>
-							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="card bg-primary ">
-						<div class="card-body">
-							<i class="fas fa-tree"></i>
-							<h2 class="text-light m-0">Lorem Ipsum</h2>
-							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="card bg-success ">
-						<div class="card-body">
-							<i class="fas fa-history"></i>
-							<h2 class="text-light m-0">Lorem Ipsum</h2>
-							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- About Services Section End-->
-
-	<!-- About Testimonial Section Start -->
-	<section id="about-testimonial" class="py-5">
-
-	</section>
-	<!-- About Testimonial Section End -->
+	
 
 	<!-- Footer Section Start -->
 	<div id="foot-placeholder"></div>
