--- a/News.html
+++ b/News.html
@@ -41,8 +41,11 @@
 	<section id="about-info" class="py-5 my-5">
 		<div class="container">
 			<p>March 22, 2023</p>
-			<img src="img/Easter_2023_details_1.png" width="90%">
-		<img src="img/EARLY_Easter_Holiday_Session_2023.png" width="90%">
+			<img src="img/Easter_2023_details_1.png" width="70%">
+		</div>
+		<div class="container">
+			<p>March 18, 2023</p>
+			<img src="img/EARLY_Easter_Holiday_Session_2023.png" width="70%">
 		</div>
 	</section>
 	<!-- About Info Section End -->
