--- a/RegisterNow.html
+++ b/RegisterNow.html
@@ -20,26 +20,44 @@
 	<!-- Nav Section End -->
 
 	<!-- About Section Start -->
-	<section id="about" class="text-center py-5 text-light">
+	<!-- <section id="about" class="text-center py-5 text-light">
 		<div class="inner-overlay">
 			<div class="container">
 				<div class="row">
 					<div class="col mt-5 pt-4">
 						<h1 class="text-light">Register Now</h1>
 						<p class="lead">
-<!-- 							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, saepe. -->
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, saepe.
 						</p>
 					</div>
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 	<!-- About Section End -->
 
 	<!-- Info Section Start -->
 	<section id="about-info" class="py-5 my-5">
-		<iframe width="100%x" height="480px" src="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u&embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
-	</section>
+		<!-- <div class="iframe-container"> -->
+			
+		<!-- <iframe src="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u&embed=true" > </iframe> -->
+
+		<!-- <iframe width="100%x" height="480px" src="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u&embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen scrolling="no" onload="resizeIframe(this)"> </iframe>  -->
+	
+		<style>
+			iframe {
+				width: 1px;
+				min-width: 100%;
+			}
+		</style>
+		<script src="/js/iframeResizer.min.js"></script>
+		<iframe  width="100%" height="2000px" src="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u&embed=true" SCROLLING="no"> </iframe> 
+		<script>
+			iFrameResize({ log: true }, '#myIframe')
+		</script>
+
+		<!-- </div> -->
+		</section>
 	<!-- About Info Section End -->
 
 	
@@ -55,6 +73,7 @@
 	<script type="text/javascript" src="js/uikit-icons.min.js"></script>
 	<script>$(function () { $("#nav-placeholder").load("navbar.html"); });</script>
 	<script>$(function () { $("#foot-placeholder").load("footer.html"); });</script>
+
 
 </body>
 
