Cleaned up home page nnd rego

--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
 						<div class="carousel-caption pb-5 mb-5 text-left">
 							<h2 class="display-4 text-light" style="text-shadow: 1px 1px 1px #000000;">School Terms</h2>
 							<p class="lead" style="text-shadow: 1px 1px 1px #000000;">
-								Lorem ipsum ut do dolor excepteur adipisicing et minim consectetur <br>elit laborum quis
-								nostrud eiusmod.
+								Check out our regular programs running to coincide with NSW School terms.
 							</p>
 							<a href="SchoolTerms.html" class="btn btn-success">Read More</a>
 						</div>
@@ -46,8 +45,7 @@
 						<div class="carousel-caption mb-5 text-center">
 							<h2 class="display-4 text-light" style="text-shadow: 1px 1px 1px #000000;">Private Sessions</h2>
 							<p style="text-shadow: 1px 1px 1px #000000;">
-								Lorem ipsum ut do dolor excepteur adipisicing et minim consectetur elit laborum quis
-								nostrud eiusmod.
+								Looking for private sessions outside our regular programs?
 							</p>
 							<a href="PrivateSessions.hmtl" class="btn btn-warning">Read More</a>
 						</div>
@@ -58,10 +56,9 @@
 						<div class="carousel-caption pb-5 mb-5 text-right">
 							<h2 class="display-4 text-light" style="text-shadow: 1px 1px 1px #000000;">Register Now</h2>
 							<p style="text-shadow: 1px 1px 1px #000000;">
-								Lorem ipsum ut do dolor excepteur adipisicing et minim <br>consectetur elit laborum quis
-								nostrud eiusmod.
+								Come join the fun!
 							</p>
-							<a href="RegisterNow.html" class="btn btn-info">Join the Program</a>
+							<a href="RegisterNow.html" class="btn btn-info">Register for a Program</a>
 						</div>
 					</div>
 				</div>
@@ -81,22 +78,27 @@
 		<div class="container">
 			<div class="row py-5 text-center">
 				<div class="col-lg-4 col-md-4">
-					<i class="fas fa-cogs mb-3"></i>
-					<h3>Turning Gears</h3>
-					<p class="lead mt-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque, totam
-						accusamus veritatis fugiat animi pariatur.</p>
+					<i class="fas fa-futbol mb-3"></i>
+					<h3>School Holiday Sessions Upcoming</h3>
+					<p class="lead mt-2">Happening this March!</p>
+					<a target="_blank" href="/img/Easter_2023_details_1.png">
+						<img src="/img/Easter_2023_details_1.png" alt="Forest" style="width:150px">
+					</a>
+
 				</div>
 				<div class="col-lg-4 col-md-4">
-					<i class="fas fa-cloud mb-3"></i>
-					<h3>Sending Data</h3>
-					<p class="lead mt-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque, totam
-						accusamus veritatis fugiat animi pariatur.</p>
+					<i class="fas fa-futbol mb-3"></i>
+					<h3>Foot And Ball Academy</h3>
+					<p class="lead mt-2">We are a Soccer Training Academy, trageting players aged 5-15, based in Richmond NSW. We specialise in small group training programs.</p>
 				</div>
 				<div class="col-lg-4 col-md-4">
-					<i class="fas fa-cart-plus mb-3"></i>
-					<h3>Making Money</h3>
-					<p class="lead mt-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque, totam
-						accusamus veritatis fugiat animi pariatur.</p>
+					<i class="fas fa-futbol mb-3"></i>
+					<h3>Register Now</h3>
+					<p class="lead mt-2">Places filling fast</p>
+					<a target="_blank" href="RegisterNow.html">
+						<img src="/img/register.png" alt="Forest" style="width:150px">
+					</a>
+
 				</div>
 			</div>
 		</div>
@@ -109,11 +111,9 @@
 			<div class="container">
 				<div class="row">
 					<div class="col mt-5 pt-4 gC">
-						<h3 class="text-light">Are You Ready To Get Started?</h3>
+						<h3 class="text-light">Football is the World Game</h3>
 						<p class="lead">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem quaerat voluptatem laboriosam
-							vero recusandae repellendus? Impedit iure est sit voluptatum blanditiis cum sequi laudantium
-							quod dicta, a quaerat vel, obcaecati!
+							Soccer is what we play in Australia.
 						</p>
 					</div>
 				</div>
@@ -121,131 +121,6 @@
 		</div>
 	</section>
 	<!-- Get Started Section End -->
-
-	<!-- Info Section Start -->
-	<section id="info" class="py-5">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-6 col-md-6 col-sm-6 justify-content-center text-left infoS">
-					<h3>Lorem Ipsum Dolor Sit</h3>
-					<p class="lead">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque dignissimos recusandae nobis
-						reiciendis voluptatem quae iusto, fugiat itaque iste explicabo.
-					</p>
-					<a href="#" class="btn btn-outline-dark">Read More</a>
-				</div>
-				<div class="col-lg-6 col-md-6 col-sm-6 align-self-center">
-					<img src="img/info.jpg" class="img-fluid">
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Info Section End -->
-
-	<!-- Video Section Start -->
-	<section id="video" class="text-center text-light">
-		<div class="video-overlay">
-			<div class="container">
-				<div class="row">
-					<div class="col mt-5 pt-4">
-						<div uk-lightbox>
-							<a href="https://youtu.be/uVqv7vIKOwM">
-								<i class="fas fa-play"></i>
-							</a>
-						</div>
-						<h2 class=" mt-5 text-light">Hack The Planet</h2>
-						<p class="lead">Click Play Button To See</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Video Section End -->
-
-	<!-- Gallery Section Start -->
-	<section id="gallery" class="py-5" uk-lightbox>
-		<div class="container">
-			<div class="row text-center">
-				<div class="col">
-					<h2 class="mb-0">Photo Gallery</h2>
-					<p class="lead m-0">Click to check out our photos</p>
-				</div>
-			</div>
-			<div class="row mt-3">
-				<div class="col-lg-4 col-md-4 col-sm-4">
-					<a href="img/gallery1.jpg">
-						<img src="img/gallery1.jpg" class="img-fluid">
-					</a>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-4">
-					<a href="img/gallery2.jpg">
-						<img src="img/gallery2.jpg" class="img-fluid">
-					</a>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-4">
-					<a href="img/gallery3.jpg">
-						<img src="img/gallery3.jpg" class="img-fluid">
-					</a>
-				</div>
-			</div>
-			<div class="row mt-3">
-				<div class="col-lg-4 col-md-4 col-sm-4">
-					<a href="img/gallery4.jpg">
-						<img src="img/gallery4.jpg" class="img-fluid">
-					</a>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-4">
-					<a href="img/gallery5.jpg">
-						<img src="img/gallery5.jpg" class="img-fluid">
-					</a>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-4">
-					<a href="img/gallery6.jpg">
-						<img src="img/gallery6.jpg" class="img-fluid">
-					</a>
-				</div>
-			</div>
-			<div class="row mt-3">
-				<div class="col-lg-4 col-md-4 col-sm-4">
-					<a href="img/gallery7.jpg">
-						<img src="img/gallery7.jpg" class="img-fluid">
-					</a>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-4">
-					<a href="img/gallery8.jpg">
-						<img src="img/gallery8.jpg" class="img-fluid">
-					</a>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-4">
-					<a href="img/gallery9.jpg">
-						<img src="img/gallery9.jpg" class="img-fluid">
-					</a>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Gellery Section End -->
-
-	<!-- Subscribe Section Start -->
-	<section id="subscribe" class="text-center py-5 bg-dark text-light">
-		<div class="container">
-			<div class="row">
-				<div class="col">
-					<h2 class="text-light">Signup For Our Newsletter</h2>
-					<p class="lead">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis magnam similique esse
-						assumenda quasi repellendus illum perferendis quos aliquid possimus.
-					</p>
-					<form class="form-inline justify-content-center ">
-						<input type="text" placeholder="Enter name" class="form-control m-2">
-						<input type="email" placeholder="Enter email" class="form-control m-2">
-						<input type="submit" value="Subscribe" class=" btn btn-primary m-2">
-					</form>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Subcribe Section End -->
 
 	<!-- Footer Section Start -->
 	<div id="foot-placeholder"></div>
