--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				<div class="col-lg-4 col-md-4">
 					<i class="fas fa-futbol mb-3"></i>
 					<h3>School Holiday Sessions Upcoming</h3>
-					<p class="lead mt-2">Happening this March!</p>
+					<p class="lead mt-2">Upcoming? April Easter Holidays! Register to come along</p>
 					<a target="_blank" href="/img/Easter_2023_details_1.png">
 						<img src="/img/Easter_2023_details_1.png" alt="Forest" style="width:150px">
 					</a>
@@ -89,7 +89,7 @@
 				<div class="col-lg-4 col-md-4">
 					<i class="fas fa-futbol mb-3"></i>
 					<h3>Foot And Ball Academy</h3>
-					<p class="lead mt-2">We are a Soccer Training Academy, trageting players aged 5-15, based in Richmond NSW. We specialise in small group training programs.</p>
+					<p class="lead mt-2">We are a Private Football Academy, focusing on player development from 5 and up! Founded in Richmond, NSW, we specialise in small group as well as 1 on 1 training programs.</p>
 				</div>
 				<div class="col-lg-4 col-md-4">
 					<i class="fas fa-futbol mb-3"></i>
@@ -113,7 +113,7 @@
 					<div class="col mt-5 pt-4 gC">
 						<h3 class="text-light">Football is the World Game</h3>
 						<p class="lead">
-							Soccer is what we play in Australia.
+							Foot and Ball is proud to be apart of that.
 						</p>
 					</div>
 				</div>
