--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 			<div class="row py-5 text-center">
 				<div class="col-lg-4 col-md-4">
 					<i class="fas fa-futbol mb-3"></i>
-					<h3>School Holiday Sessions Upcoming</h3>
-					<p class="lead mt-2">Upcoming? April Easter Holidays! Register to come along</p>
+					<h3>Fast Apporaching!</h3>
+					<p class="lead mt-2">April Easter School Holidays 2023. Find out more below.</p>
 					<a target="_blank" href="/img/Easter_2023_details_1.png">
 						<img src="/img/Easter_2023_details_1.png" alt="Forest" style="width:150px">
 					</a>
@@ -88,13 +88,13 @@
 				</div>
 				<div class="col-lg-4 col-md-4">
 					<i class="fas fa-futbol mb-3"></i>
-					<h3>Foot And Ball Academy</h3>
+					<h3>Our Mission</h3>
 					<p class="lead mt-2">We are a Private Football Academy, focusing on player development from 5 and up! Founded in Richmond, NSW, we specialise in small group as well as 1 on 1 training programs.</p>
 				</div>
 				<div class="col-lg-4 col-md-4">
 					<i class="fas fa-futbol mb-3"></i>
-					<h3>Register Now</h3>
-					<p class="lead mt-2">Places filling fast</p>
+					<h3>April Easter Holday registration</h3>
+					<p class="lead mt-2">Click below. Places filling fast!</p>
 					<a target="_blank" href="RegisterNow.html">
 						<img src="/img/register.png" alt="Forest" style="width:150px">
 					</a>
@@ -111,9 +111,9 @@
 			<div class="container">
 				<div class="row">
 					<div class="col mt-5 pt-4 gC">
-						<h3 class="text-light">Football is the World Game</h3>
+						<h3 class="text-light">Football is the World Game.</h3>
 						<p class="lead">
-							Foot and Ball is proud to be apart of that.
+							Foot and Ball Academy is proud to be apart of that.
 						</p>
 					</div>
 				</div>
