--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			<div class="row py-5 text-center">
 				<div class="col-lg-4 col-md-4">
 					<i class="fas fa-futbol mb-3"></i>
-					<h3>Fast Apporaching!</h3>
+					<h3>Fast Approaching!</h3>
 					<p class="lead mt-2">April Easter School Holidays 2023. Find out more below.</p>
 					<a target="_blank" href="/img/Easter_2023_details_1.png">
 						<img src="/img/Easter_2023_details_1.png" alt="Forest" style="width:150px">
@@ -93,8 +93,8 @@
 				</div>
 				<div class="col-lg-4 col-md-4">
 					<i class="fas fa-futbol mb-3"></i>
-					<h3>April Easter Holday registration</h3>
-					<p class="lead mt-2">Click below. Places filling fast!</p>
+					<h3>April Easter Holiday registration</h3>
+					<p class="lead mt-2">Click below. Places are filling fast!</p>
 					<a target="_blank" href="RegisterNow.html">
 						<img src="/img/register.png" alt="Forest" style="width:150px">
 					</a>
